2013-04-06 Roman
- SYS: Default messages level is set to "Info (1)".
- !!!!:UI.{VCAEngine,Vision,WebVision}: Scales separation for different parameters of primitive "Diagram" is implemented.


2013-03-30 Roman
- UI.Vision: Status line display control is added for run projects.
- UI.WebVision: The property "Margin" for primitive "Text" behavior is changed and border calculation added.
- UI.WebVision: Control information clear for closing pages is added. "overflow: hidden;" for primitive "Text" is added.


2013-03-28 Roman
- SYS.TCntrNode,DAQ.SMH2Gi,Protocol.HTTP,Transport.Serial:
    Devices by "<dev>" and "<chrdev>" listing is added to function TCntrNode::ctrListFS() and some used.
- !!:UI.WebVision: External JS file "WebVisionVCA.js" loading try from current directory is added. JS code changes:
    - mostly clean and fix;
    - zero opacity checking is added for background disable;
    - asynchronous main cycle requests try;
    - primitives 'ElFigure', 'Media', 'FormEl' mostly adapted for prevent non full context replacing on single dynamic properties change.
    - drag for images is disabled for FireFox.


2013-03-24 Roman
- FIX:UI.WebVision: Mostly JS code clean, direct objects free is added, memory leak fix into this.mousedown and this.mouseup functions' arrays.
- SYS.TCntrNode,DB.SQLite: To function TCntrNode::ctrListFS() is added files browsing and in some places used.
- DAQ.DCON: Any other besides "Serial" transports selection is allowed.


2013-03-22 Roman
- SYS.Value: Attribute print name is set to container name and the attribute description.
    For empty name used only the attribute description.
- FIX:SYS,UI.{Vision,WebVision}: Precision boundary for real to string converting is set to > 0. Padding boundary is set to (-1000;1000).
- FIX:Archive: Access to source for "Passive" mode is disabled.
- DAQ.Siemens: Try requests for different DB disabled on the task endrun.


2013-03-09 Roman