@@ -1,3 +1,8 @@
+2013-04-10 Roman
+- FIX:DB.PostgreSQL: Connection procedure is rewrote for allow connect to need DB and only for errors connect to "template1",
+    check for present and create for need. The allow to set permition only to need and present DB, without "template1".
+
+
 2013-04-06 Roman
 - SYS: Default messages level is set to "Info (1)".
 - !!!!:UI.{VCAEngine,Vision,WebVision}: Scales separation for different parameters of primitive "Diagram" is implemented.
